src/test/ui/specialization/issue-38091-2.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-38091-2.rs:4:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: consider using `min_specialization` instead, which is more stable and complete

error[E0275]: overflow evaluating the requirement `i32: Check`
   |
   = note: required because of the requirements on the impl of `Iterate` for `i32`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0275`.
